--- a/ReadMe
+++ b/ReadMe
@@ -1,9 +1,3 @@
 # 🛡️ SuperSecret - AI-Guarded Ephemeral Messaging
-
-![Python](https://img.shields.io/badge/Backend-Python%20Flask-blue?style=for-the-badge&logo=python)
-![AI](https://img.shields.io/badge/AI-Hugging%20Face%20Transformers-yellow?style=for-the-badge&logo=huggingface)
-![Security](https://img.shields.io/badge/Security-Fernet%20Encryption-green?style=for-the-badge&logo=lock)
-![Realtime](https://img.shields.io/badge/Communication-Socket.IO-lightgrey?style=for-the-badge&logo=socket.io)
-
-> **SuperSecret** is a secure, real-time messaging platform developed during the **BTK Akademi Hackathon**. It features ephemeral chats that self-destruct upon closure and an AI-powered content moderation system that filters toxic language, spam, and malicious URLs in real-time.
+ **SuperSecret** is a secure, real-time messaging platform developed during the **BTK Akademi Hackathon**. It features ephemeral chats that self-destruct upon closure and an AI-powered content moderation system that filters toxic language, spam, and malicious URLs in real-time.
 
